welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not found: type color
	var T= new Array[color](getMondeHauteur())
                         ^Array1:16: error: not found: type i
		T[i]:=getCouleurSol()
                  ^Array1:30: error: not found: type j
	setCouleurBrosse(T[j])
                           ^